[package]
name = "openrr-config"
version = "0.0.6"
authors = ["Taiki Endo <taiki@smilerobotics.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Utilities for modifying configuration files"
keywords = ["robotics", "robot"]
categories = ["science::robotics", "gui"]
repository = "https://github.com/openrr/openrr"
documentation = "https://docs.rs/openrr-config"

[dependencies]
anyhow = "1"
toml = "0.5"
toml-query = "0.10"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1"
