[package]
name = "openrr-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Utilities for modifying configuration files"
keywords = ["robotics", "robot"]
categories = ["science::robotics", "gui"]

[dependencies]
anyhow = "1"
toml = "0.5"
toml-query = "0.10"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1"
