[package]
name = "openrr-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Utilities for modifying configuration files"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[dependencies]
anyhow.workspace = true
toml-query.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true

[lints]
workspace = true
