[package]
name = "openrr-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openrr GUI library"
keywords = ["robotics", "robot"]
categories = ["science::robotics", "gui"]

[features]
default = ["assimp"]
assimp = ["openrr-client/assimp"]
# Enables the `iced_glow` renderer on GUI.
# This might be useful if the default renderer doesn't work.
glow = ["iced/glow"]

[dependencies]
arci = "0.0.7"
iced = { version = "0.4.2", features = ["image"] }
iced_futures = { version = "0.4.1", features = ["tokio"] }
iced_style_config = "0.2"
openrr-client = { version = "0.0.7", default-features = false }
rand = "0.8"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1"
