[package]
name = "openrr-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openrr GUI library"
keywords = ["robotics", "robot"]
categories = ["science::robotics", "gui"]

[features]
default = ["assimp"]
assimp = ["openrr-client/assimp"]

[dependencies]
arci = "0.0.7"
eframe = "0.20"
egui_extras = { version = "0.20", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
openrr-client = { version = "0.0.7", default-features = false }
rand = "0.8"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
urdf-rs = "0.6"

[dev-dependencies]
anyhow = "1"
assert_approx_eq = "1.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter"] }
