[package]
name = "openrr-planner"
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
description = "Collision avoidance path planning for robotics"
keywords = ["pathplanning", "robotics", "robot"]
categories = ["algorithms", "science::robotics"]
repository = "https://github.com/openrr/openrr"

[features]
default = ["assimp"]

[dependencies]
assimp = { version = "0.3", optional = true }
k = "0.29"
mesh-loader = "0.0.2"
ncollide3d = "0.33"
num-traits = "0.2"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.5"
rrt = "0.6"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
trajectory = "0.1.0"
urdf-rs = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1"
clap = { version = "4", features = ["derive"] }
criterion = "0.4"
flaky_test = "0.1"
nalgebra = "0.30"
rand = "0.8"
tracing-subscriber = "0.3"
urdf-viz = "0.41"

[[bench]]
name = "collision_detection"
harness = false
