[package]
name = "openrr-planner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Collision avoidance path planning for robotics"
keywords = ["pathplanning", "robotics", "robot"]
categories = ["algorithms", "science::robotics"]

[features]
default = []

[dependencies]
k.workspace = true
mesh-loader.workspace = true
ncollide3d.workspace = true
num-traits.workspace = true
rand.workspace = true
rayon.workspace = true
rrt.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
trajectory.workspace = true
urdf-rs.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
clap.workspace = true
criterion.workspace = true
flaky_test.workspace = true
nalgebra.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
urdf-viz.workspace = true

[[bench]]
name = "collision_detection"
harness = false

[lints]
workspace = true
