[package]
name = "openrr-plugin"
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
description = "Plugin support for arci"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[dependencies]
abi_stable = "0.11"
anyhow = "1"
arci = "0.0.7"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "parking_lot"] }

[dev-dependencies]
assert_approx_eq = "1"
criterion = "0.4"
fs-err = "2"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "proxy"
harness = false
