[package]
name = "openrr-remote"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "Remote execution support for arci"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"

[build-dependencies]
tonic-build = "0.8"

[dependencies]
arci = "0.0.6"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
tonic = "0.8"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
assert_approx_eq = "1"
tokio = { version = "1", features = ["full"] }
