[package]
name = "openrr-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote execution support for arci"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[build-dependencies]
tonic-build = "0.8"

[dependencies]
arci = "0.0.7"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"] }
tonic = "0.8"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
assert_approx_eq = "1"
tokio = { version = "1", features = ["full"] }
