[package]
name = "openrr-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote execution support for arci"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[build-dependencies]
tonic-build.workspace = true

[dependencies]
arci.workspace = true
prost-types.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_approx_eq.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
