[package]
name = "openrr-sleep"
version = "0.0.3"
authors = ["Takashi Ogura <ogura@smilerobotics.com>"]
edition = "2018"
license = "Apache-2.0"
description = "openrr sleep library"
keywords = ["robotics", "robot"]
categories = ["algorithms", "science::robotics"]
repository = "https://github.com/openrr/openrr"
documentation = "http://docs.rs/openrr-sleep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
