[package]
name = "openrr-sleep"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "openrr sleep library"
keywords = ["robotics", "robot"]
categories = ["algorithms", "science::robotics"]
repository = "https://github.com/openrr/openrr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
