[package]
name = "openrr-teleop"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "openrr teleoperation library"
keywords = ["robotics", "robot"]
categories = ["algorithms", "science::robotics"]
repository = "https://github.com/openrr/openrr"

[features]
default = ["assimp"]
assimp = ["openrr-client/assimp"]

[dependencies]
arci = { path = "../arci", version = "0.0.6" }
async-trait = "0.1"
auto_impl = "1.0.0"
clap = { version = "4", features = ["derive"] }
k = "0.29"
openrr-client = { path = "../openrr-client", version = "0.0.6", default-features = false }
openrr-command = { path = "../openrr-command", version = "0.0.6", default-features = false }
parking_lot = "0.12"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "parking_lot"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
