[package]
name = "openrr-teleop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "openrr teleoperation library"
keywords = ["robotics", "robot"]
categories = ["algorithms", "science::robotics"]

[features]
default = ["assimp"]
assimp = ["openrr-client/assimp"]

[dependencies]
arci = "0.0.7"
async-trait = "0.1"
auto_impl = "1.0.0"
clap = { version = "4", features = ["derive"] }
k = "0.29"
openrr-client = { version = "0.0.7", default-features = false }
openrr-command = { version = "0.0.7", default-features = false }
parking_lot = "0.12"
schemars = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "parking_lot"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
