[package]
name = "openrr"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
homepage = "https://openrr.github.io"
description = "Open Rust Robotics framework"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]
repository = "https://github.com/openrr/openrr"
readme = "../README.md"

[features]
default = ["assimp"]
assimp = [
    "openrr-client/assimp",
    "openrr-command/assimp",
    "openrr-planner/assimp",
    "openrr-teleop/assimp",
    "openrr-apps/assimp",
]
ros = ["openrr-apps/ros"]

[dependencies]
openrr-client = { version = "0.0.6", default-features = false }
openrr-config = { version = "0.0.6", default-features = false }
openrr-command = { version = "0.0.6", default-features = false }
openrr-planner = { version = "0.0.6", default-features = false }
openrr-sleep = "0.0.6"
openrr-teleop = { version = "0.0.6", default-features = false }

[dependencies.openrr-apps]
version = "0.0.6"
default-features = false
features = ["gui"]
