[package]
name = "openrr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Open Rust Robotics framework"
keywords = ["robotics", "robot"]
categories = ["science::robotics"]

[features]
default = ["assimp"]
assimp = [
    "openrr-client/assimp",
    "openrr-command/assimp",
    "openrr-planner/assimp",
    "openrr-teleop/assimp",
    "openrr-apps/assimp",
]
gui = ["openrr-apps/gui"]
ros = ["openrr-apps/ros"]

[dependencies]
openrr-apps = { version = "0.0.7", default-features = false }
openrr-client = { version = "0.0.7", default-features = false }
openrr-command = { version = "0.0.7", default-features = false }
openrr-config = { version = "0.0.7", default-features = false }
openrr-planner = { version = "0.0.7", default-features = false }
openrr-teleop = { version = "0.0.7", default-features = false }
