[package]
name = "openrr-internal-codegen"
edition.workspace = true

[dependencies]
anyhow.workspace = true
fs-err.workspace = true
heck.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit-mut"] }
tempfile.workspace = true

[lints]
workspace = true
