<package>
    <name>move_base_msgs</name>
    <version>1.13.0</version>
    <description>

        Holds the action description and relevant messages for the move_base package

    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url type="website">http://wiki.ros.org/move_base_msgs</url>
    <url type="bugtracker">https://github.com/ros-planning/navigation_msgs/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

</package>

