<package>
  <name>sensor_msgs</name>
  <version>1.12.7</version>
  <description>
    This package defines messages for commonly used sensors, including
    cameras and scanning laser rangefinders.
  </description>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/sensor_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosbag</test_depend>
  <test_depend>rosunit</test_depend>


  <export>
    <architecture_independent/>
    <rosbag migration_rule_file="migration_rules/sensor_msgs.bmr"/>
  </export>
</package>
