[package]
name = "openrr-plugin-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
arci = "0.0.6"
arci-gamepad-keyboard = "0.0.6"
openrr-client = "0.0.6"
openrr-plugin = "0.0.6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
